--- a/tmpl/final.html
+++ b/tmpl/final.html
@@ -19,7 +19,7 @@
     The authentication token, and other data will be provided as a fragment in the URL, we've extracted the token below.
   </p>
   <p>
-    The request cycle is complete, and an access token has been generated: <span style="font-weight: bold" id="token"></span>
+    The request cycle is complete, and an access code has been generated: <span style="font-weight: bold" id="code"></span>
   </p>
   
 </div>
@@ -27,13 +27,19 @@
 <script>
   
   $(document).ready(function(){
-    
-    var hash = window.location.hash;
 
-    var parts = hash.split("&")
-    var token_parts = parts[0].split("=")
+    var authcode = getParameterByName('code');
+    $("#code").text(authcode);
 
-    $("#token").text(token_parts[1]);
+    function getParameterByName(name, url) {
+      if (!url) url = window.location.href;
+      name = name.replace(/[\[\]]/g, '\\$&');
+      var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
+              results = regex.exec(url);
+      if (!results) return null;
+      if (!results[2]) return '';
+      return decodeURIComponent(results[2].replace(/\+/g, ' '));
+    }
 });
   
 
