--- a/tmpl/login.html
+++ b/tmpl/login.html
@@ -36,7 +36,9 @@
       <label for="pwd">Password:</label>
       <input type="password" class="form-control" id="pwd" placeholder="Enter password">
     </div>
-    <input type="hidden" class="form-control" id="response_type" name="response_type" value="{{.ResponseType}}">
+      <label for="gateway_url"><b>Gateway URL</b></label>
+      <input class="form-control" id="gateway_url" name="gateway_url" value="http://localhost:8080">
+      <input type="hidden" class="form-control" id="response_type" name="response_type" value="{{.ResponseType}}">
       <input type="hidden" class="form-control" id="client_id" name="client_id" value="{{.ClientID}}">
       <input type="hidden" class="form-control" id="redirect_uri" name="redirect_uri" value="{{.RedirectURI}}">
     <button type="submit" class="btn btn-default">Login</button>
